...


        <androidx.recyclerview.widget.RecyclerView
            android:visibility="gone"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/searchLayout"
            android:id="@+id/tracksRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
        <RelativeLayout
            android:layout_marginTop="5dp"
            android:layout_below="@+id/searchLayout"
            android:background="@color/colorBlack"
...
                android:layout_height="20dp"/>


            <androidx.appcompat.widget.AppCompatEditText
                android:hint="@string/search_tracks_here"
                android:layout_marginHorizontal="50dp"
                android:id="@+id/mainSearchText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <ProgressBar
                android:visibility="gone"
                android:layout_marginRight="15dp"
                android:layout_alignParentRight="true"
...
