<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.MainActivity">

    <RelativeLayout
        android:id="@+id/actionBar"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <TextView
            android:id="@+id/toolbarTextView"
            android:layout_marginLeft="20dp"
            android:layout_centerVertical="true"
            android:textColor="@color/colorWhite"
            android:textSize="19dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <RelativeLayout
            android:background="@drawable/ic_logout"
            android:id="@+id/logOutButton"
            android:layout_marginRight="20dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_width="30dp"
            android:layout_height="30dp"/>

    </RelativeLayout>

    <fragment
        android:layout_below="@+id/actionBar"
        android:id="@+id/nav_host_fragment"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:defaultNavHost="true"
        app:navGraph="@navigation/nav_graph" />

</RelativeLayout>