...
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.5"
        >

        <RelativeLayout
            android:id="@+id/loginFromApp"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="40dp"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@drawable/login_button_background_shape"
            >
...
